added the image for the background

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,23 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>You don't know JACK S*** about Rick And Morty</title>
-		<link rel="stylesheet" type="text/css" href="css/quiz.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/quiz.css">
 	</head>
 	<body>
 
 	
 	<div id="rickNmortyQuiz">
+
+		<h1>You don't know JACK S*** about<span> Rick And Morty</span></h1>
+		<div class="progress"></div>
+		<div class="intro">
+			<h2>Welcome</h2>
+			<p>Click begin to test your knowledge on Rick and Morty</p>
+			<p>Begin</p>
+		</div>
+		<div class="question"></div>
+		<div class=" results"></div>
+
 
 	</div>
 		
