Styled the progress and intro divs

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		<div class="intro">
 			<h2>Welcome</h2>
 			<p>Click begin to test your knowledge on Rick and Morty</p>
-			<p>Begin</p>
+			<p class="button" >Begin</p>
 		</div>
 		<div class="question"></div>
 		<div class=" results"></div>
