--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,13 @@
 			<p>Click begin to test your knowledge on Rick and Morty</p>
 			<p class="button" >Begin</p>
 		</div>
-		<div class="question"></div>
+		<div class="question">
+			<p class="text">This is a question</p>
+			<p class="answer ">Answer 1</p>
+			<p class="answer selected correct">Answer 2</p>
+			<p class="answer ">Answer 3</p>
+			<p class="answer">Answer 4</p>
+		</div>
 		<div class=" results"></div>
 
 
