updated css and index.html for styling hte feedback divs

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,15 @@
 		<div class="question">
 			<p class="text">This is a question</p>
 			<p class="answer ">Answer 1</p>
-			<p class="answer selected correct">Answer 2</p>
-			<p class="answer ">Answer 3</p>
+			<p class="answer selected ">Answer 2</p>
+			<p class="answer correct">Answer 3</p>
 			<p class="answer">Answer 4</p>
+	
+		<div class=" feedback">
+			<p> You are <strong>Correct</strong>.</p>
+			<p>Oops! that is not correct.</p>
+			<div class="button">Continue</div>
+		</div>
 		</div>
 		<div class=" results"></div>
 
