added content and style to the results container

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,20 @@
 	
 		<div class=" feedback">
 			<p> You are <strong>Correct</strong>.</p>
-			<p>Oops! that is not correct.</p>
+			<p>Oops! That is not correct.</p>
+			<p>Additional Feedback></p>
 			<div class="button">Continue</div>
 		</div>
 		</div>
-		<div class=" results"></div>
+		<div class=" results">
+			<h3>Results</h3>
+				<p>You scored X% by correctly answering X of the total X questions.</p>
+				<p>Use the links below to challenge your friends.</p>
+				<div class="share">
+					<a class="button email" href="#">Email</a>
+					<a class="button twitter" href="#">Tweet</a>
+				</div>
+		</div>
 
 
 	</div>
