created a progress using psuedo elements and css3 transitions

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,12 @@
 	<div id="rickNmortyQuiz">
 
 		<h1>You don't know JACK S*** about<span> Rick And Morty</span></h1>
-		<div class="progress"></div>
+		<div class="progress">
+			<div class="answered correct"></div>
+			<div class="on"></div>
+			<div></div>
+			<div></div>
+		</div>
 		<div class="intro">
 			<h2>Welcome</h2>
 			<p>Click begin to test your knowledge on Rick and Morty</p>
