--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,9 @@
 
 		<h1>You don't know JACK S*** about<span> Rick And Morty</span></h1>
 		<div class="progress">
-			<div class="answered correct"></div>
-			<div class="on"></div>
-			<div></div>
-			<div></div>
+			<div ng-repeat="myQuestion in myQuestions"></div>
 		</div>
-		<div class="intro">
+		<div class="intro {{ (activeQuestion > -1 ? 'inactive' : 'active' )}}">
 			<h2>Welcome</h2>
 			<p>Click begin to test your knowledge on Rick and Morty</p>
 			<p class="button" >Begin</p>
