--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 		<div class="intro {{ (activeQuestion > -1 ? 'inactive' : 'active' )}}">
 			<h2>Welcome</h2>
 			<p>Click begin to test your knowledge on Rick and Morty</p>
-			<p class="button" >Begin</p>
+			<p class="button"  ng-click="activeQuestion = 0"  >Begin</p>
 		</div>
 		<div class="question">
 			<p class="text">This is a question</p>
