--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
 			<p>Click begin to test your knowledge on Rick and Morty</p>
 			<p class="button"  ng-click="activeQuestion = 0"  >Begin</p>
 		</div>
-		<div class="question">
-			<p class="text">This is a question</p>
-			<p class="answer ">Answer 1</p>
+		<div class="question answered" ng-repeat="myQuestion in myQuestions">
+			<p class="text">{{}}</p>
+			<p class="answer"   ng-repeat="Answer in myQuestions[$index].answers">{{Answer.text}}</p>
 			<p class="answer selected ">Answer 2</p>
 			<p class="answer correct">Answer 3</p>
 			<p class="answer">Answer 4</p>
