--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
 
 		<h1>You don't know JACK S*** about<span> Rick And Morty</span></h1>
 		<div class="progress">
-			<div class= "{{($index === activeQuestion) ? 'on' : 'off' }} " ng-repeat="myQuestion in myQuestions"></div>
+			<div class= "{{($index === activeQuestion) ? 'on' : 'off' }} 
+			{{ (myQuestion.questionState === 'answered') ? 'answered' : 'unanswered' }}
+				{{ (myQuestion.correctness === 'correct') ? 'correct' : 'incorrect' }}" 
+			ng-repeat="myQuestion in myQuestions"></div>
 		</div>
 		<div class="intro {{ (activeQuestion > -1 ? 'inactive' : 'active' )}}">
 			<h2>Welcome</h2>
@@ -26,21 +29,21 @@
 		{{ myQuestion.questionState === 'answered' ? 'answered' : 'unanswered'}}
 		"  ng-repeat="myQuestion in myQuestions">
 			<p class="text">{{myQuestion.question}}</p>
-			<p class="answer" 
-					ng-repeat="Answer in myQuestions[$index].answers"
+			<p class="answer" 			
 					ng-class="{ 
 								image:Answer.image,
 								selected:isSelected($parent.$index, $index),
 								correct:isCorrect($parent.$index, $index)
 							  }"
 					ng-style="{ 'background-image':'url({{Answer.image}})'}"
-					ng-click="selectAnswer($parent.$index, $index)">
+					ng-repeat="Answer in myQuestions[$index].answers"
+					ng-click="chooseAnswer($parent.$index, $index)">
 					{{Answer.text}}</p>
-		<div class=" feedback">
-			<p> You are <strong>Correct</strong>.</p>
-			<p>Oops! That is not correct.</p>
-			<p>Additional Feedback></p>
-			<div class="button">Continue</div>
+		<div class="feedback">
+			<p ng-show="myQuestion.correctness === 'correct'"> You are <strong>Correct</strong>.</p>
+			<p ng-show="myQuestion.correctness === 'incorrect'" >Oops! That is not correct.</p>
+			<p>{{myQuestion.feedback}}</p>
+			<div class="button" ng-click="selectContinue()" >Continue</div>
 		</div>
 		</div>
 		<div class=" results">
