--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,11 @@
 			<div class="button" ng-click="selectContinue()" >Continue</div>
 		</div>
 		</div>
-		<div class=" results">
+		<div class=" results {{ (totalQuestions === activeQuestion) ? 'active' : 'inactive' }} ">
 			<h3>Results</h3>
-				<p>You scored X% by correctly answering X of the total X questions.</p>
+				<p>You scored {{percentage}}% by correctly answering {{score}} of the total {{totalQuestions}} questions.</p>
 				<p>Use the links below to challenge your friends.</p>
-				<div class="share">
+				<div class="share"" ng-bind-html="createShareLinks(percentage)">
 					<a class="button email" href="#">Email</a>
 					<a class="button twitter" href="#">Tweet</a>
 				</div>
